ElfScript/console/torquescript/CMDgram.output
Terminals unused in grammar

    rwENDDEF
    rwGLOBAL
    rwNIL
    rwENDIF
    rwENDWHILE
    rwENDFOR
    ILLEGAL_TOKEN
    CHRCONST
    opCAT


State 364 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: decl_list

    2 decl_list: ε
    3          | decl_list decl

    4 decl: stmt
    5     | fn_decl_stmt
    6     | package_decl

    7 package_decl: rwPACKAGE IDENT '{' fn_decl_list '}' ';'

    8 fn_decl_list: fn_decl_stmt
    9             | fn_decl_list fn_decl_stmt

   10 statement_list: ε
   11               | statement_list stmt

   12 stmt: if_stmt
   13     | while_stmt
   14     | for_stmt
   15     | foreach_stmt
   16     | datablock_decl
   17     | switch_stmt
   18     | rwBREAK ';'
   19     | rwCONTINUE ';'
   20     | rwRETURN ';'
   21     | rwRETURN expr ';'
   22     | rwRETURN '{' expr_list '}' ';'
   23     | expression_stmt ';'
   24     | TTAG '=' expr ';'
   25     | TTAG '=' expr ',' expr ';'
   26     | DOCBLOCK
   27     | '[' unpack_var_list ']' '=' expr ';'
   28     | '[' unpack_var_list ']' '=' '{' expr_list '}' ';'
   29     | '[' unpack_var_list ']' '=' '[' expr_list ']' ';'

   30 fn_decl_stmt: rwDEFINE IDENT '(' func_var_list_decl ')' '{' statement_list '}'
   31             | rwDEFINE IDENT opCOLONCOLON IDENT '(' func_var_list_decl ')' '{' statement_list '}'

   32 func_var_list_decl: ε
   33                   | func_var_list

   34 func_var_list: param
   35              | func_var_list ',' param

   36 param: VAR
   37      | VAR '?'
   38      | VAR '=' expr
   39      | VAR '?' '=' expr

   40 unpack_var_list: unpack_param
   41                | unpack_var_list ',' unpack_param

   42 unpack_param: VAR
   43             | VAR '?'

   44 datablock_decl: rwDATABLOCK class_name_expr '(' expr parent_block ')' '{' slot_assign_list_opt '}' ';'

   45 object_decl: rwDECLARE class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   46            | rwDECLARE class_name_expr '(' object_name parent_block object_args ')'
   47            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   48            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')'
   49            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   50            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')'

   51 parent_block: ε
   52             | ':' IDENT

   53 object_name: ε
   54            | expr

   55 object_args: ε
   56            | ',' expr_list

   57 object_declare_block: ε
   58                     | slot_assign_list
   59                     | object_decl_list
   60                     | slot_assign_list object_decl_list

   61 object_decl_list: object_decl ';'
   62                 | object_decl_list object_decl ';'

   63 stmt_block: '{' statement_list '}'
   64           | stmt

   65 switch_stmt: rwSWITCH '(' expr ')' '{' case_block '}'
   66            | rwSWITCHSTR '(' expr ')' '{' case_block '}'

   67 case_block: rwCASE case_expr ':' statement_list
   68           | rwCASE case_expr ':' statement_list rwDEFAULT ':' statement_list
   69           | rwCASE case_expr ':' statement_list case_block

   70 case_expr: expr
   71          | case_expr rwCASEOR expr

   72 if_stmt: rwIF '(' expr ')' stmt_block
   73        | rwIF '(' expr ')' stmt_block rwELSE stmt_block

   74 while_stmt: rwWHILE '(' expr ')' stmt_block
   75           | rwDO stmt_block rwWHILE '(' expr ')'

   76 for_stmt: rwFOR '(' expr ';' expr ';' expr ')' stmt_block
   77         | rwFOR '(' expr ';' expr ';' ')' stmt_block
   78         | rwFOR '(' expr ';' ';' expr ')' stmt_block
   79         | rwFOR '(' expr ';' ';' ')' stmt_block
   80         | rwFOR '(' ';' expr ';' expr ')' stmt_block
   81         | rwFOR '(' ';' expr ';' ')' stmt_block
   82         | rwFOR '(' ';' ';' expr ')' stmt_block
   83         | rwFOR '(' ';' ';' ')' stmt_block
   84         | rwFOR '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   85         | rwFOR '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   86         | rwFOR '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   87         | rwFOR '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   88         | rwFOR '(' VAR rwIN rwRANGE expr ')' stmt_block

   89 foreach_stmt: rwFOREACH '(' VAR rwIN expr ')' stmt_block
   90             | rwFOREACHSTR '(' VAR rwIN expr ')' stmt_block
   91             | rwFOREACH '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   92             | rwFOREACH '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   93             | rwFOREACH '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   94             | rwFOREACH '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   95             | rwFOREACH '(' VAR rwIN rwRANGE expr ')' stmt_block

   96 expression_stmt: stmt_expr

   97 expr: stmt_expr
   98     | '(' expr ')'
   99     | expr '^' expr
  100     | expr '%' expr
  101     | expr '&' expr
  102     | expr '|' expr
  103     | expr '+' expr
  104     | expr '-' expr
  105     | expr '*' expr
  106     | expr '/' expr
  107     | '-' expr
  108     | '*' expr
  109     | TTAG
  110     | expr '?' expr ':' expr
  111     | expr '?' '{' expr_list '}' ':' '{' expr_list '}'
  112     | expr '?' expr ':' '{' expr_list '}'
  113     | expr '?' '{' expr_list '}' ':' expr
  114     | expr '<' expr
  115     | expr '>' expr
  116     | expr opGE expr
  117     | expr opLE expr
  118     | expr opEQ expr
  119     | expr opNE expr
  120     | expr opOR expr
  121     | expr opSHL expr
  122     | expr opSHR expr
  123     | expr opAND expr
  124     | expr opSTREQ expr
  125     | expr opSTRNE expr
  126     | expr '@' expr
  127     | '!' expr
  128     | '~' expr
  129     | TAGATOM
  130     | FLTCONST
  131     | INTCONST
  132     | rwBREAK
  133     | slot_acc
  134     | intslot_acc
  135     | IDENT
  136     | STRATOM
  137     | VAR
  138     | VAR '[' aidx_expr ']'
  139     | rwFN '(' func_var_list_decl ')' '{' statement_list '}'

  140 slot_acc: expr '.' IDENT
  141         | expr '.' IDENT '[' aidx_expr ']'

  142 intslot_acc: expr opINTNAME class_name_expr
  143            | expr opINTNAMER class_name_expr

  144 class_name_expr: IDENT
  145                | '(' expr ')'

  146 assign_op_struct: opPLUSPLUS
  147                 | opMINUSMINUS
  148                 | opPLASN expr
  149                 | opMIASN expr
  150                 | opMLASN expr
  151                 | opDVASN expr
  152                 | opMODASN expr
  153                 | opANDASN expr
  154                 | opXORASN expr
  155                 | opORASN expr
  156                 | opSLASN expr
  157                 | opSRASN expr

  158 stmt_expr: funcall_expr
  159          | assert_expr
  160          | inline_command_expr
  161          | object_decl
  162          | VAR '=' expr
  163          | VAR '=' '{' expr_list '}'
  164          | VAR '=' '[' expr_list ']'
  165          | VAR '[' aidx_expr ']' '=' expr
  166          | VAR '[' aidx_expr ']' '=' '{' expr_list '}'
  167          | VAR assign_op_struct
  168          | VAR '[' aidx_expr ']' assign_op_struct
  169          | slot_acc assign_op_struct
  170          | slot_acc '=' expr
  171          | slot_acc '=' '{' expr_list '}'
  172          | slot_acc '=' '[' expr_list ']'

  173 funcall_expr: IDENT '(' func_arg_list_decl ')'
  174             | IDENT opCOLONCOLON IDENT '(' func_arg_list_decl ')'
  175             | expr '.' IDENT '(' func_arg_list_decl ')'
  176             | VAR '(' func_arg_list_decl ')'

  177 func_arg_item: expr
  178              | '{' expr_list '}'

  179 func_arg_list: func_arg_item
  180              | func_arg_list ',' func_arg_item

  181 func_arg_list_decl: ε
  182                   | func_arg_list

  183 assert_expr: rwASSERT '(' expr ')'
  184            | rwASSERT '(' expr ',' STRATOM ')'

  185 inline_command_expr: rwPRINT '(' expr_list ')'
  186                    | rwPRINTF '(' expr_list ')'
  187                    | rwSPRINTF '(' expr_list ')'
  188                    | rwRANDOMF '(' ')'
  189                    | rwRANDOMF '(' expr_list ')'
  190                    | rwFLOOR '(' expr_list ')'
  191                    | rwCEIL '(' expr_list ')'
  192                    | rwFABS '(' expr_list ')'
  193                    | rwSIN '(' expr_list ')'
  194                    | rwCOS '(' expr_list ')'
  195                    | rwATAN '(' expr_list ')'
  196                    | rwTANH '(' expr_list ')'
  197                    | rwSQRT '(' expr_list ')'
  198                    | rwISZERO '(' expr_list ')'
  199                    | rwFMOD '(' expr_list ')'
  200                    | rwMIN '(' expr_list ')'
  201                    | rwMAX '(' expr_list ')'
  202                    | rwATAN2 '(' expr_list ')'
  203                    | rwPOW '(' expr_list ')'
  204                    | rwCLAMP '(' expr_list ')'
  205                    | rwCLAMPF '(' expr_list ')'
  206                    | rwLERP '(' expr_list ')'
  207                    | rwSMOOTHSTEP '(' expr_list ')'

  208 expr_list: expr
  209          | expr_list ',' expr

  210 slot_assign_list_opt: ε
  211                     | slot_assign_list

  212 slot_assign_list: slot_assign
  213                 | slot_assign_list slot_assign

  214 slot_assign: IDENT '=' expr ';'
  215            | IDENT '=' '{' expr_list '}' ';'
  216            | IDENT '=' '[' expr_list ']' ';'
  217            | TYPEIDENT IDENT '=' expr ';'
  218            | TYPEIDENT IDENT '=' '{' expr_list '}' ';'
  219            | rwDATABLOCK '=' expr ';'
  220            | IDENT '[' aidx_expr ']' '=' expr ';'
  221            | IDENT '[' aidx_expr ']' '=' '{' expr_list '}' ';'
  222            | TYPEIDENT IDENT '[' aidx_expr ']' '=' expr ';'

  223 aidx_expr: expr
  224          | aidx_expr ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' <i> (33) 127
    '%' <i> (37) 100
    '&' <i> (38) 101
    '(' <i> (40) 30 31 44 45 46 47 48 49 50 65 66 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 98 139 145 173 174 175 176 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    ')' <i> (41) 30 31 44 45 46 47 48 49 50 65 66 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 98 139 145 173 174 175 176 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
    '*' <i> (42) 105 108
    '+' <i> (43) 103
    ',' <i> (44) 25 35 41 56 180 184 209 224
    '-' <i> (45) 104 107
    '.' <i> (46) 140 141 175
    '/' <i> (47) 106
    ':' <i> (58) 52 67 68 69 110 111 112 113
    ';' <i> (59) 7 18 19 20 21 22 23 24 25 27 28 29 44 61 62 76 77 78 79 80 81 82 83 214 215 216 217 218 219 220 221 222
    '<' <i> (60) 114
    '=' <i> (61) 24 25 27 28 29 38 39 162 163 164 165 166 170 171 172 214 215 216 217 218 219 220 221 222
    '>' <i> (62) 115
    '?' (63) 37 39 43 110 111 112 113
    '@' <i> (64) 126
    '[' (91) 27 28 29 47 48 138 141 164 165 166 168 172 216 220 221 222
    ']' (93) 27 28 29 47 48 138 141 164 165 166 168 172 216 220 221 222
    '^' <i> (94) 99
    '{' <i> (123) 7 22 28 30 31 44 45 47 49 63 65 66 111 112 113 139 163 166 171 178 215 218 221
    '|' <i> (124) 102
    '}' <i> (125) 7 22 28 30 31 44 45 47 49 63 65 66 111 112 113 139 163 166 171 178 215 218 221
    '~' <i> (126) 128
    error (256)
    rwDEFINE <i> (258) 30 31
    rwENDDEF <i> (259)
    rwDECLARE <i> (260) 45 46 47 48
    rwDECLARESINGLETON <i> (261) 49 50
    rwBREAK <i> (262) 18 132
    rwELSE <i> (263) 73
    rwCONTINUE <i> (264) 19
    rwGLOBAL <i> (265)
    rwIF <i> (266) 72 73
    rwNIL <i> (267)
    rwRETURN <i> (268) 20 21 22
    rwWHILE <i> (269) 74 75
    rwDO <i> (270) 75
    rwENDIF <i> (271)
    rwENDWHILE <i> (272)
    rwENDFOR <i> (273)
    rwDEFAULT <i> (274) 68
    rwFOR <i> (275) 76 77 78 79 80 81 82 83 84 85 86 87 88
    rwFOREACH <i> (276) 89 91 92 93 94 95
    rwFOREACHSTR <i> (277) 90
    rwIN <i> (278) 84 85 86 87 88 89 90 91 92 93 94 95
    rwDATABLOCK <i> (279) 44 219
    rwSWITCH <i> (280) 65
    rwCASE <i> (281) 67 68 69
    rwSWITCHSTR <i> (282) 66
    rwCASEOR <i> (283) 71
    rwPACKAGE <i> (284) 7
    rwASSERT <i> (285) 183 184
    ILLEGAL_TOKEN (286)
    CHRCONST <c> (287)
    INTCONST <i> (288) 131
    TTAG <s> (289) 24 25 109
    VAR <s> (290) 36 37 38 39 42 43 84 85 86 87 88 89 90 91 92 93 94 95 137 138 162 163 164 165 166 167 168 176
    IDENT <s> (291) 7 30 31 52 135 140 141 144 173 174 175 214 215 216 217 218 220 221 222
    TYPEIDENT <i> (292) 217 218 222
    DOCBLOCK <str> (293) 26
    STRATOM <str> (294) 136 184
    TAGATOM <str> (295) 129
    FLTCONST <f> (296) 130
    opINTNAME <i> (297) 142
    opINTNAMER <i> (298) 143
    opMINUSMINUS <i> (299) 147
    opPLUSPLUS <i> (300) 146
    opSHL <i> (301) 121
    opSHR <i> (302) 122
    opPLASN <i> (303) 148
    opMIASN <i> (304) 149
    opMLASN <i> (305) 150
    opDVASN <i> (306) 151
    opMODASN <i> (307) 152
    opANDASN <i> (308) 153
    opXORASN <i> (309) 154
    opORASN <i> (310) 155
    opSLASN <i> (311) 156
    opSRASN <i> (312) 157
    opCAT <i> (313)
    opEQ <i> (314) 118
    opNE <i> (315) 119
    opGE <i> (316) 116
    opLE <i> (317) 117
    opAND <i> (318) 123
    opOR <i> (319) 120
    opSTREQ <i> (320) 124
    opSTRNE <i> (321) 125
    opCOLONCOLON <i> (322) 31 174
    opDOTDOT <i> (323) 84 85 86 87 91 92 93 94
    rwRANGE <i> (324) 85 87 88 92 94 95
    rwSTEP <i> (325) 86 87 93 94
    rwPRINT <i> (326) 185
    rwPRINTF <i> (327) 186
    rwSPRINTF <i> (328) 187
    rwRANDOMF <i> (329) 188 189
    rwFLOOR <i> (330) 190
    rwCEIL <i> (331) 191
    rwFABS <i> (332) 192
    rwSIN <i> (333) 193
    rwCOS <i> (334) 194
    rwATAN <i> (335) 195
    rwTANH <i> (336) 196
    rwSQRT <i> (337) 197
    rwISZERO <i> (338) 198
    rwFMOD <i> (339) 199
    rwMIN <i> (340) 200
    rwMAX <i> (341) 201
    rwATAN2 <i> (342) 202
    rwPOW <i> (343) 203
    rwCLAMP <i> (344) 204
    rwCLAMPF <i> (345) 205
    rwLERP <i> (346) 206
    rwSMOOTHSTEP <i> (347) 207
    rwFN <i> (348) 139
    UNARY (349)


Nonterminals, with rules where they appear

    $accept (120)
        on left: 0
    start (121)
        on left: 1
        on right: 0
    decl_list <stmt> (122)
        on left: 2 3
        on right: 1 3
    decl <stmt> (123)
        on left: 4 5 6
        on right: 3
    package_decl <stmt> (124)
        on left: 7
        on right: 6
    fn_decl_list <stmt> (125)
        on left: 8 9
        on right: 7 9
    statement_list <stmt> (126)
        on left: 10 11
        on right: 11 30 31 63 67 68 69 139
    stmt <stmt> (127)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 4 11 64
    fn_decl_stmt <stmt> (128)
        on left: 30 31
        on right: 5 8 9
    func_var_list_decl <var> (129)
        on left: 32 33
        on right: 30 31 139
    func_var_list <var> (130)
        on left: 34 35
        on right: 33 35
    param <var> (131)
        on left: 36 37 38 39
        on right: 34 35
    unpack_var_list <var> (132)
        on left: 40 41
        on right: 27 28 29 41
    unpack_param <var> (133)
        on left: 42 43
        on right: 40 41
    datablock_decl <stmt> (134)
        on left: 44
        on right: 16
    object_decl <od> (135)
        on left: 45 46 47 48 49 50
        on right: 61 62 161
    parent_block <s> (136)
        on left: 51 52
        on right: 44 45 46 47 48 49 50
    object_name <expr> (137)
        on left: 53 54
        on right: 45 46 47 48 49 50
    object_args <expr> (138)
        on left: 55 56
        on right: 45 46 47 48 49 50
    object_declare_block <odcl> (139)
        on left: 57 58 59 60
        on right: 45 47 49
    object_decl_list <od> (140)
        on left: 61 62
        on right: 59 60 62
    stmt_block <stmt> (141)
        on left: 63 64
        on right: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    switch_stmt <stmt> (142)
        on left: 65 66
        on right: 17
    case_block <ifnode> (143)
        on left: 67 68 69
        on right: 65 66 69
    case_expr <expr> (144)
        on left: 70 71
        on right: 67 68 69 71
    if_stmt <stmt> (145)
        on left: 72 73
        on right: 12
    while_stmt <stmt> (146)
        on left: 74 75
        on right: 13
    for_stmt <stmt> (147)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 14
    foreach_stmt <stmt> (148)
        on left: 89 90 91 92 93 94 95
        on right: 15
    expression_stmt <stmt> (149)
        on left: 96
        on right: 23
    expr <expr> (150)
        on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139
        on right: 21 24 25 27 38 39 44 54 65 66 70 71 72 73 74 75 76 77 78 79 80 81 82 84 85 86 87 88 89 90 91 92 93 94 95 98 99 100 101 102 103 104 105 106 107 108 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 140 141 142 143 145 148 149 150 151 152 153 154 155 156 157 162 165 170 175 177 183 184 208 209 214 217 219 220 222 223 224
    slot_acc <slot> (151)
        on left: 140 141
        on right: 133 169 170 171 172
    intslot_acc <intslot> (152)
        on left: 142 143
        on right: 134
    class_name_expr <expr> (153)
        on left: 144 145
        on right: 44 45 46 47 48 49 50 142 143
    assign_op_struct <asn> (154)
        on left: 146 147 148 149 150 151 152 153 154 155 156 157
        on right: 167 168 169
    stmt_expr <expr> (155)
        on left: 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172
        on right: 96 97
    funcall_expr <expr> (156)
        on left: 173 174 175 176
        on right: 158
    func_arg_item <expr> (157)
        on left: 177 178
        on right: 179 180
    func_arg_list <expr> (158)
        on left: 179 180
        on right: 180 182
    func_arg_list_decl <expr> (159)
        on left: 181 182
        on right: 173 174 175 176
    assert_expr <expr> (160)
        on left: 183 184
        on right: 159
    inline_command_expr <expr> (161)
        on left: 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207
        on right: 160
    expr_list <expr> (162)
        on left: 208 209
        on right: 22 28 29 56 111 112 113 163 164 166 171 172 178 185 186 187 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 209 215 216 218 221
    slot_assign_list_opt <slist> (163)
        on left: 210 211
        on right: 44
    slot_assign_list <slist> (164)
        on left: 212 213
        on right: 58 60 211 213
    slot_assign <slist> (165)
        on left: 214 215 216 217 218 219 220 221 222
        on right: 212 213
    aidx_expr <expr> (166)
        on left: 223 224
        on right: 138 141 165 166 168 220 221 222 224


State 0

    0 $accept: • start $end

    $default  reduce using rule 2 (decl_list)

    start      go to state 1
    decl_list  go to state 2


State 1

    0 $accept: start • $end

    $end  shift, and go to state 3


State 2

    1 start: decl_list •
    3 decl_list: decl_list • decl

    rwDEFINE            shift, and go to state 4
    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwPACKAGE           shift, and go to state 19
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33
    rwPRINT             shift, and go to state 34
    rwPRINTF            shift, and go to state 35
    rwSPRINTF           shift, and go to state 36
    rwRANDOMF           shift, and go to state 37
    rwFLOOR             shift, and go to state 38
    rwCEIL              shift, and go to state 39
    rwFABS              shift, and go to state 40
    rwSIN               shift, and go to state 41
    rwCOS               shift, and go to state 42
    rwATAN              shift, and go to state 43
    rwTANH              shift, and go to state 44
    rwSQRT              shift, and go to state 45
    rwISZERO            shift, and go to state 46
    rwFMOD              shift, and go to state 47
    rwMIN               shift, and go to state 48
    rwMAX               shift, and go to state 49
    rwATAN2             shift, and go to state 50
    rwPOW               shift, and go to state 51
    rwCLAMP             shift, and go to state 52
    rwCLAMPF            shift, and go to state 53
    rwLERP              shift, and go to state 54
    rwSMOOTHSTEP        shift, and go to state 55
    rwFN                shift, and go to state 56
    '['                 shift, and go to state 57

    $default  reduce using rule 1 (start)

    decl                 go to state 58
    package_decl         go to state 59
    stmt                 go to state 60
    fn_decl_stmt         go to state 61
    datablock_decl       go to state 62
    object_decl          go to state 63
    switch_stmt          go to state 64
    if_stmt              go to state 65
    while_stmt           go to state 66
    for_stmt             go to state 67
    foreach_stmt         go to state 68
    expression_stmt      go to state 69
    expr                 go to state 70
    slot_acc             go to state 71
    intslot_acc          go to state 72
    stmt_expr            go to state 73
    funcall_expr         go to state 74
    assert_expr          go to state 75
    inline_command_expr  go to state 76


State 3

    0 $accept: start $end •

    $default  accept


State 4

   30 fn_decl_stmt: rwDEFINE • IDENT '(' func_var_list_decl ')' '{' statement_list '}'
   31             | rwDEFINE • IDENT opCOLONCOLON IDENT '(' func_var_list_decl ')' '{' statement_list '}'

    IDENT  shift, and go to state 77


State 5

   45 object_decl: rwDECLARE • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   46            | rwDECLARE • class_name_expr '(' object_name parent_block object_args ')'
   47            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   48            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')'

    IDENT  shift, and go to state 78
    '('    shift, and go to state 79

    class_name_expr  go to state 80


State 6

   49 object_decl: rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   50            | rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')'

    IDENT  shift, and go to state 78
    '('    shift, and go to state 79

    class_name_expr  go to state 81


State 7

   18 stmt: rwBREAK • ';'
  132 expr: rwBREAK •

    ';'  shift, and go to state 82

    $default  reduce using rule 132 (expr)


State 8

   19 stmt: rwCONTINUE • ';'

    ';'  shift, and go to state 83


State 9

   72 if_stmt: rwIF • '(' expr ')' stmt_block
   73        | rwIF • '(' expr ')' stmt_block rwELSE stmt_block

    '('  shift, and go to state 84


State 10

   20 stmt: rwRETURN • ';'
   21     | rwRETURN • expr ';'
   22     | rwRETURN • '{' expr_list '}' ';'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 85
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 86
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    ';'                 shift, and go to state 87
    '{'                 shift, and go to state 88
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33
    rwPRINT             shift, and go to state 34
    rwPRINTF            shift, and go to state 35
    rwSPRINTF           shift, and go to state 36
    rwRANDOMF           shift, and go to state 37
    rwFLOOR             shift, and go to state 38
    rwCEIL              shift, and go to state 39
    rwFABS              shift, and go to state 40
    rwSIN               shift, and go to state 41
    rwCOS               shift, and go to state 42
    rwATAN              shift, and go to state 43
    rwTANH              shift, and go to state 44
    rwSQRT              shift, and go to state 45
    rwISZERO            shift, and go to state 46
    rwFMOD              shift, and go to state 47
    rwMIN               shift, and go to state 48
    rwMAX               shift, and go to state 49
    rwATAN2             shift, and go to state 50
    rwPOW               shift, and go to state 51
    rwCLAMP             shift, and go to state 52
    rwCLAMPF            shift, and go to state 53
    rwLERP              shift, and go to state 54
    rwSMOOTHSTEP        shift, and go to state 55
    rwFN                shift, and go to state 56

    object_decl          go to state 63
    expr                 go to state 89
    slot_acc             go to state 71
    intslot_acc          go to state 72
    stmt_expr            go to state 90
    funcall_expr         go to state 74
    assert_expr          go to state 75
    inline_command_expr  go to state 76


State 11

   74 while_stmt: rwWHILE • '(' expr ')' stmt_block

    '('  shift, and go to state 91


State 12

   75 while_stmt: rwDO • stmt_block rwWHILE '(' expr ')'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '{'                 shift, and go to state 92
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33
    rwPRINT             shift, and go to state 34
    rwPRINTF            shift, and go to state 35
    rwSPRINTF           shift, and go to state 36
    rwRANDOMF           shift, and go to state 37
    rwFLOOR             shift, and go to state 38
    rwCEIL              shift, and go to state 39
    rwFABS              shift, and go to state 40
    rwSIN               shift, and go to state 41
    rwCOS               shift, and go to state 42
    rwATAN              shift, and go to state 43
    rwTANH              shift, and go to state 44
    rwSQRT              shift, and go to state 45
    rwISZERO            shift, and go to state 46
    rwFMOD              shift, and go to state 47
    rwMIN               shift, and go to state 48
    rwMAX               shift, and go to state 49
    rwATAN2             shift, and go to state 50
    rwPOW               shift, and go to state 51
    rwCLAMP             shift, and go to state 52
    rwCLAMPF            shift, and go to state 53
    rwLERP              shift, and go to state 54
    rwSMOOTHSTEP        shift, and go to state 55
    rwFN                shift, and go to state 56
    '['                 shift, and go to state 57

    stmt                 go to state 93
    datablock_decl       go to state 62
    object_decl          go to state 63
    stmt_block           go to state 94
    switch_stmt          go to state 64
    if_stmt              go to state 65
    while_stmt           go to state 66
    for_stmt             go to state 67
    foreach_stmt         go to state 68
    expression_stmt      go to state 69
    expr                 go to state 70
    slot_acc             go to state 71
    intslot_acc          go to state 72
    stmt_expr            go to state 73
    funcall_expr         go to state 74
    assert_expr          go to state 75
    inline_command_expr  go to state 76


State 13

   76 for_stmt: rwFOR • '(' expr ';' expr ';' expr ')' stmt_block
   77         | rwFOR • '(' expr ';' expr ';' ')' stmt_block
   78         | rwFOR • '(' expr ';' ';' expr ')' stmt_block
   79         | rwFOR • '(' expr ';' ';' ')' stmt_block
   80         | rwFOR • '(' ';' expr ';' expr ')' stmt_block
   81         | rwFOR • '(' ';' expr ';' ')' stmt_block
   82         | rwFOR • '(' ';' ';' expr ')' stmt_block
   83         | rwFOR • '(' ';' ';' ')' stmt_block
   84         | rwFOR • '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   85         | rwFOR • '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   86         | rwFOR • '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   87         | rwFOR • '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   88         | rwFOR • '(' VAR rwIN rwRANGE expr ')' stmt_block

    '('  shift, and go to state 95


State 14

   89 foreach_stmt: rwFOREACH • '(' VAR rwIN expr ')' stmt_block
   91             | rwFOREACH • '(' VAR rwIN expr opDOTDOT expr ')' stmt_block
   92             | rwFOREACH • '(' VAR rwIN rwRANGE expr opDOTDOT expr ')' stmt_block
   93             | rwFOREACH • '(' VAR rwIN expr opDOTDOT expr rwSTEP expr ')' stmt_block
   94             | rwFOREACH • '(' VAR rwIN rwRANGE expr opDOTDOT expr rwSTEP expr ')' stmt_block
   95             | rwFOREACH • '(' VAR rwIN rwRANGE expr ')' stmt_block

    '('  shift, and go to state 96


State 15

   90 foreach_stmt: rwFOREACHSTR • '(' VAR rwIN expr ')' stmt_block

    '('  shift, and go to state 97


State 16
